Cleaned up overflow bug

--- a/styles/Error.module.scss
+++ b/styles/Error.module.scss
@@ -1,10 +1,10 @@
 .error {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
   width: 100%;
+  min-height: 100vh;
   text-align: center;
   position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .roundelButton {
